; ModuleID = '/home/carl/AnghaBench/reactos/base/applications/wordpad/extr_print.c_preview_page_hittest.c'
source_filename = "/home/carl/AnghaBench/reactos/base/applications/wordpad/extr_print.c_preview_page_hittest.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_9__ = type { i32, i32, %struct.TYPE_7__, %struct.TYPE_6__ }
%struct.TYPE_7__ = type { i64, i64 }
%struct.TYPE_6__ = type { i64, i64 }
%struct.TYPE_8__ = type { i64, i64, i64, i64 }

@preview = common dso_local global %struct.TYPE_9__ zeroinitializer, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @preview_page_hittest to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @preview_page_hittest(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_8__, align 8
  store i32 %0, i32* %3, align 4
  %5 = load i64, i64* getelementptr inbounds (%struct.TYPE_9__, %struct.TYPE_9__* @preview, i32 0, i32 2, i32 0), align 8
  %6 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %4, i32 0, i32 1
  store i64 %5, i64* %6, align 8
  %7 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %4, i32 0, i32 1
  %8 = load i64, i64* %7, align 8
  %9 = load i64, i64* getelementptr inbounds (%struct.TYPE_9__, %struct.TYPE_9__* @preview, i32 0, i32 3, i32 0), align 8
  %10 = add nsw i64 %8, %9
  %11 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %4, i32 0, i32 0
  store i64 %10, i64* %11, align 8
  %12 = load i64, i64* getelementptr inbounds (%struct.TYPE_9__, %struct.TYPE_9__* @preview, i32 0, i32 2, i32 1), align 8
  %13 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %4, i32 0, i32 2
  store i64 %12, i64* %13, align 8
  %14 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %4, i32 0, i32 2
  %15 = load i64, i64* %14, align 8
  %16 = load i64, i64* getelementptr inbounds (%struct.TYPE_9__, %struct.TYPE_9__* @preview, i32 0, i32 3, i32 1), align 8
  %17 = add nsw i64 %15, %16
  %18 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %4, i32 0, i32 3
  store i64 %17, i64* %18, align 8
  %19 = load i32, i32* %3, align 4
  %20 = call i64 @PtInRect(%struct.TYPE_8__* %4, i32 %19)
  %21 = icmp ne i64 %20, 0
  br i1 %21, label %22, label %23

22:                                               ; preds = %1
  store i32 1, i32* %2, align 4
  br label %50

23:                                               ; preds = %1
  %24 = load i32, i32* getelementptr inbounds (%struct.TYPE_9__, %struct.TYPE_9__* @preview, i32 0, i32 0), align 8
  %25 = icmp sle i32 %24, 1
  br i1 %25, label %26, label %27

26:                                               ; preds = %23
  store i32 0, i32* %2, align 4
  br label %50

27:                                               ; preds = %23
  %28 = load i64, i64* getelementptr inbounds (%struct.TYPE_9__, %struct.TYPE_9__* @preview, i32 0, i32 3, i32 0), align 8
  %29 = load i64, i64* getelementptr inbounds (%struct.TYPE_9__, %struct.TYPE_9__* @preview, i32 0, i32 2, i32 0), align 8
  %30 = add nsw i64 %28, %29
  %31 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %4, i32 0, i32 1
  %32 = load i64, i64* %31, align 8
  %33 = add nsw i64 %32, %30
  store i64 %33, i64* %31, align 8
  %34 = load i64, i64* getelementptr inbounds (%struct.TYPE_9__, %struct.TYPE_9__* @preview, i32 0, i32 3, i32 0), align 8
  %35 = load i64, i64* getelementptr inbounds (%struct.TYPE_9__, %struct.TYPE_9__* @preview, i32 0, i32 2, i32 0), align 8
  %36 = add nsw i64 %34, %35
  %37 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %4, i32 0, i32 0
  %38 = load i64, i64* %37, align 8
  %39 = add nsw i64 %38, %36
  store i64 %39, i64* %37, align 8
  %40 = load i32, i32* %3, align 4
  %41 = call i64 @PtInRect(%struct.TYPE_8__* %4, i32 %40)
  %42 = icmp ne i64 %41, 0
  br i1 %42, label %43, label %49

43:                                               ; preds = %27
  %44 = load i32, i32* getelementptr inbounds (%struct.TYPE_9__, %struct.TYPE_9__* @preview, i32 0, i32 1), align 4
  %45 = call i64 @is_last_preview_page(i32 %44)
  %46 = icmp ne i64 %45, 0
  %47 = zext i1 %46 to i64
  %48 = select i1 %46, i32 1, i32 2
  store i32 %48, i32* %2, align 4
  br label %50

49:                                               ; preds = %27
  store i32 0, i32* %2, align 4
  br label %50

50:                                               ; preds = %49, %43, %26, %22
  %51 = load i32, i32* %2, align 4
  ret i32 %51
}

declare dso_local i64 @PtInRect(%struct.TYPE_8__*, i32) #1

declare dso_local i64 @is_last_preview_page(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
